# node-embed

./: CMakeLists.txt
cmake/: FindNode.cmake
src/: main.cpp
